Persisted mongodb. Change routine to indexed document. Add WorkoutExercise as a structure. Corrected Tests